<resources>
    <string name="app_name">RiseUpdates</string>
    <string name="tab_text_1">riseKernel</string>
    <string name="tab_text_2">Rise-Q</string>
    <string name="tab_text_3">riseTreble</string>
    <string name="chooseVersion_text">Choose version:</string>
    <string name="chooseType_text">Choose type:</string>
    <string name="afh_download">Androidfilehost</string>
    <string name="gdrive_download">Google Drive</string>
    <string name="settingsOption">Settings</string>
    <string name="installedVersion">Installed version:</string>
    <string name="notInstalled">None</string>
    <string name="title_activity_settings">Settings</string>
    <string name="downloadMirror">Download mirror:</string>
    <string name="download">Download</string>
    <string-array name="updateInterval">
        <item>Every 12hrs</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Never</item>
    </string-array>
    <string name="buildDate">[PLACEHOLDER]</string>
    <string name="support">Support</string>
    <string name="xda">XDA Thread</string>
    <string name="telegram">Telegram group</string>
    <string name="github">My Github profile</string>
</resources>