<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_links_page1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/rounded_corners" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginVertical="5dp" />

    <ImageButton
        android:id="@+id/imageButton_xda_page1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/light_gray"
        android:src="@drawable/ic_xda"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/xda"/>

    <ImageButton
        android:id="@+id/imageButton_telegram_page1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/light_gray"
        android:src="@drawable/ic_telegram"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/telegram"/>

    <ImageButton
        android:id="@+id/imageButton_github_page1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/light_gray"
        android:src="@drawable/ic_github"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/github"/>

</RelativeLayout>